update foot borders

--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -70,7 +70,7 @@ include=~/.config/foot/themes/nord.ini
 # alternate-scroll-mode=yes
 
 [colors]
-# alpha=1.0
+alpha=0.8
 # foreground=dcdccc
 # background=111111
 
