--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -38,6 +38,16 @@ bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection
 unbind -T copy-mode-vi MouseDragEnd1Pane
 
+# colors
+
+COLOR1='#434c5e'
+COLOR2='#4c566a'
+COLOR_W="#d8dee9"
+COLOR_B="#3b4252"
+set -g pane-border-style fg=$COLOR2
+set -g pane-active-border-style "bg=default fg=$COLOR2"
+set -wg mode-style "bg=$COLOR_B fg=default"
+
 # plugin manager
 set -g @plugin 'tmux-plugins/tpm'
 
