dnm tmux custom config path

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,4 +1,5 @@
 TMUX_HOME="$XDG_CONFIG_HOME/tmux"
+TMUX_DATA="$XDG_DATA_HOME/tmux"
 
 # use 256 color terminal and set RBG color
 set -g default-terminal "tmux-256color"
@@ -49,6 +50,7 @@ set -g pane-active-border-style "bg=default fg=$COLOR2"
 set -wg mode-style "bg=$COLOR_B fg=default"
 
 # plugin manager
+set-environment -g TMUX_PLUGIN_MANAGER_PATH '$TMUX_DATA/plugins/'
 set -g @plugin 'tmux-plugins/tpm'
 
 # tmux plugins
@@ -67,13 +69,15 @@ set -g @plugin 'erikw/tmux-powerline'
 # tmux configuration
 set-option -g status-position top
 
-
 # other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'github_username/plugin_name#branch'
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
 
+# autoinstall tmux plugin manager if not available
+if "test ! -d $TMUX_DATA/plugins/tpm" \
+    "run 'git clone https://github.com/tmux-plugins/tpm $TMUX_DATA/plugins/tpm && $TMUX_DATA/plugins/tpm/bin/install_plugins'"
 
 # initialize tmux plugin manager (keep this line at the very bottom of tmux.conf)
-run '$TMUX_HOME/plugins/tpm/tpm'
+run '$TMUX_DATA/plugins/tpm/tpm'
