--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,16 +1,17 @@
+# Tmux install paths
 TMUX_HOME="$XDG_CONFIG_HOME/tmux"
 TMUX_DATA="$XDG_DATA_HOME/tmux"
 
-# use 256 color terminal and set RBG color
+# Use 256 color terminal and set RBG color
 set -g default-terminal "tmux-256color"
 set -as terminal-features ",xterm*:RGB"
 
-# define prefix as ctrl-space
+# Define prefix as ctrl-space
 set -g prefix C-space
 unbind C-b
 bind-key C-space send-prefix
 
-# rebind window split keys
+# Rebind window split keys
 unbind %
 bind | split-window -h
 unbind '"'
@@ -20,27 +21,26 @@ bind - split-window -v
 unbind r
 bind r source-file $TMUX_HOME/tmux.conf
 
-# resize panes
+# Resize panes
 bind -r j resize-pane -D 5
 bind -r k resize-pane -U 5
 bind -r h resize-pane -L 5
 bind -r l resize-pane -R 5
 
-# full screen current pane
+# Full screen current pane
 bind -r m resize-pane -Z
 
 # mouse toggle
 bind m set -g mouse on \; display 'Mouse On'
 bind M set -g mouse off \; display 'Mouse Off'
 
-# vi motions in tmux
+# Vi motions in tmux
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection
 unbind -T copy-mode-vi MouseDragEnd1Pane
 
-# colors
-
+# Colors
 COLOR1='#434c5e'
 COLOR2='#4c566a'
 COLOR_W="#d8dee9"
@@ -49,35 +49,34 @@ set -g pane-border-style fg=$COLOR2
 set -g pane-active-border-style "bg=default fg=$COLOR2"
 set -wg mode-style "bg=$COLOR_B fg=default"
 
-# plugin manager
-set-environment -g TMUX_PLUGIN_MANAGER_PATH '$TMUX_DATA/plugins/'
+# Plugin manager
+set-environment -g TMUX_PLUGIN_MANAGER_PATH "$TMUX_DATA/plugins/"
 set -g @plugin 'tmux-plugins/tpm'
 
-# tmux plugins
+# Tmux plugins
 #set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 #set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'erikw/tmux-powerline'
-# set -g @plugin 'Nybkox/tmux-kanagawa'
 # set -g @plugin "nordtheme/tmux"
 
-# tmux plugin configuration
+# Tmux plugin configuration
 #set -g @resurrect-capture-pane-contents 'on'
 #set -g @continuum-restore 'on'
 
-# tmux configuration
+# Tmux configuration
 set-option -g status-position top
 
-# other examples:
+# Other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'github_username/plugin_name#branch'
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
 
-# autoinstall tmux plugin manager if not available
+# Autoinstall tmux plugin manager if not available
 if "test ! -d $TMUX_DATA/plugins/tpm" \
     "run 'git clone https://github.com/tmux-plugins/tpm $TMUX_DATA/plugins/tpm && $TMUX_DATA/plugins/tpm/bin/install_plugins'"
 
-# initialize tmux plugin manager (keep this line at the very bottom of tmux.conf)
+# Initialize tmux plugin manager (keep this line at the very bottom of tmux.conf)
 run '$TMUX_DATA/plugins/tpm/tpm'
