--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -40,14 +40,11 @@ bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection
 unbind -T copy-mode-vi MouseDragEnd1Pane
 
-# Colors
-COLOR1='#434c5e'
-COLOR2='#4c566a'
-COLOR_W="#d8dee9"
-COLOR_B="#3b4252"
-set -g pane-border-style fg=$COLOR2
-set -g pane-active-border-style "bg=default fg=$COLOR2"
-set -wg mode-style "bg=$COLOR_B fg=default"
+# Splits / window pane colors
+COLOR_HL='#3b4252'
+set -g pane-border-style bg=default,fg=color8
+set -g pane-active-border-style bg=default,fg=color6
+set -g mode-style bg=$COLOR_HL,fg=default
 
 # Plugin manager
 set-environment -g TMUX_PLUGIN_MANAGER_PATH "$TMUX_DATA/plugins/"
@@ -57,9 +54,8 @@ set -g @plugin 'tmux-plugins/tpm'
 #set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-#set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'erikw/tmux-powerline'
-# set -g @plugin "nordtheme/tmux"
 
 # Tmux plugin configuration
 #set -g @resurrect-capture-pane-contents 'on'
