--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,47 +1,12 @@
+import = [
+    "~/.config/alacritty/themes/themes/nord.toml"
+]
+
 live_config_reload = true
 
 [bell]
 animation = "EaseOutExpo"
 duration = 0
-
-[colors]
-draw_bold_text_with_bright_colors = true
-
-[[colors.indexed_colors]]
-color = "0xF8BD96"
-index = 16
-
-[[colors.indexed_colors]]
-color = "0xF5E0DC"
-index = 17
-
-[colors.bright]
-black = "0x988BA2"
-blue = "0x96CDFB"
-cyan = "0x89DCEB"
-green = "0xABE9B3"
-magenta = "0xF5C2E7"
-red = "0xF28FAD"
-white = "0xD9E0EE"
-yellow = "0xFAE3B0"
-
-[colors.cursor]
-cursor = "0xF5E0DC"
-text = "0x1E1D2F"
-
-[colors.normal]
-black = "0x6E6C7E"
-blue = "0x96CDFB"
-cyan = "0x89DCEB"
-green = "0xABE9B3"
-magenta = "0xF5C2E7"
-red = "0xF28FAD"
-white = "0xD9E0EE"
-yellow = "0xFAE3B0"
-
-[colors.primary]
-background = "0x1E1D2F"
-foreground = "0xD9E0EE"
 
 [cursor]
 blink_interval = 500
@@ -52,11 +17,8 @@ unfocused_hollow = false
 blinking = "Off"
 shape = "Block"
 
-[env]
-TERM = "xterm-256color"
-
 [font]
-size = 18
+size = 11
 
 [font.bold]
 family = "JetBrainsMono Nerd Font"
@@ -84,20 +46,14 @@ hide_when_typing = true
 action = "PasteSelection"
 mouse = "Middle"
 
-[selection]
-semantic_escape_chars = ",│`|:\"' ()[]{}<>"
-
 [shell]
 program = "/bin/zsh"
 
 [window]
-decorations = "full"
+decorations = "Full"
 dynamic_title = true
-startup_mode = "Maximized"
-
-[window.dimensions]
-columns = 160
-lines = 80
+startup_mode = "Windowed"
+decorations_theme_variant = "Dark"
 
 [window.padding]
 x = 4
