--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -4,7 +4,7 @@ TMUX_DATA="$XDG_DATA_HOME/tmux"
 
 # Use 256 color terminal and set RBG color
 set -g default-terminal "tmux-256color"
-set -as terminal-features ",xterm*:RGB"
+set -as terminal-features ",$TERM*:RGB"
 
 # Define prefix as ctrl-space
 set -g prefix C-space
