--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -2,9 +2,13 @@
 TMUX_HOME="$XDG_CONFIG_HOME/tmux"
 TMUX_DATA="$XDG_DATA_HOME/tmux"
 
-# Use 256 color terminal and set RBG color
+# Terminal configuration
 set -g default-terminal "tmux-256color"
 set -as terminal-features ",$TERM*:RGB"
+
+# Put session info in terminal title
+set-option -g set-titles on
+set-option -g set-titles-string "tmux : #S · #W"
 
 # Define prefix as ctrl-space
 set -g prefix C-space
