update tmux config

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -3,76 +3,72 @@ TMUX_HOME="$XDG_CONFIG_HOME/tmux"
 TMUX_DATA="$XDG_DATA_HOME/tmux"
 
 # Terminal configuration
-set -g default-terminal "tmux-256color"
-set -as terminal-features ",$TERM*:RGB"
+set-option -g default-terminal "tmux-256color"
+set-option -as terminal-features ",$TERM*:RGB"
 
-# Put session info in terminal title
+# Session info in terminal title
 set-option -g set-titles on
 set-option -g set-titles-string "tmux : #S · #W"
 
 # Define prefix as ctrl-space
-set -g prefix C-space
-unbind C-b
+unbind-key C-b
+set-option -g prefix C-space
 bind-key C-space send-prefix
 
-# Rebind window split keys
-unbind %
-bind | split-window -h
-unbind '"'
-bind - split-window -v
+# Bind reload config
+unbind-key r
+bind-key r source-file $TMUX_HOME/tmux.conf
 
-# reload tmux config
-unbind r
-bind r source-file $TMUX_HOME/tmux.conf
+# Rebind-key window split keys
+unbind-key %
+bind-key | split-window -h
+unbind-key '"'
+bind-key - split-window -v
 
 # Resize panes
-bind -r j resize-pane -D 5
-bind -r k resize-pane -U 5
-bind -r h resize-pane -L 5
-bind -r l resize-pane -R 5
+bind-key -r j resize-pane -D 5
+bind-key -r k resize-pane -U 5
+bind-key -r h resize-pane -L 5
+bind-key -r l resize-pane -R 5
 
 # Full screen current pane
-bind -r m resize-pane -Z
+bind-key -r m resize-pane -Z
 
-# mouse toggle
-bind m set -g mouse on \; display 'Mouse On'
-bind M set -g mouse off \; display 'Mouse Off'
+# Mouse toggle
+bind-key m set-option -g mouse on \; display 'Mouse On'
+bind-key M set-option -g mouse off \; display 'Mouse Off'
 
 # Vi motions in tmux
 set-window-option -g mode-keys vi
-bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-selection
-unbind -T copy-mode-vi MouseDragEnd1Pane
+bind-key -T copy-mode-vi v send-key -X begin-selection
+bind-key -T copy-mode-vi y send-key -X copy-selection-and-cancel
+bind-key -T copy-mode-vi C-v send-key -X rectangle-toggle
 
-# Splits / window pane colors
-COLOR_HL='#3b4252'
-set -g pane-border-style bg=default,fg=color8
-set -g pane-active-border-style bg=default,fg=color6
-set -g mode-style bg=$COLOR_HL,fg=default
+# Statusline / Splits / Windows
+NORD_GREY='#3b4252'
+set-option -g pane-border-style bg=default,fg=color8
+set-option -g pane-active-border-style bg=default,fg=color6
+set-option -g mode-style bg=$NORD_GREY,fg=default
+set-option -g status-position top
+set-option -g status-interval 5
+
+# Sensible Configs
+set-option -s escape-time 0
+set-option -g history-limit 50000
 
 # Plugin manager
 set-environment -g TMUX_PLUGIN_MANAGER_PATH "$TMUX_DATA/plugins/"
-set -g @plugin 'tmux-plugins/tpm'
+set-option -g @plugin 'tmux-plugins/tpm'
 
 # Tmux plugins
-#set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-# set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'erikw/tmux-powerline'
+set-option -g @plugin 'christoomey/vim-tmux-navigator'
+set-option -g @plugin 'tmux-plugins/tmux-resurrect'
+# set-option -g @plugin 'tmux-plugins/tmux-continuum'
+set-option -g @plugin 'erikw/tmux-powerline'
 
 # Tmux plugin configuration
-#set -g @resurrect-capture-pane-contents 'on'
-#set -g @continuum-restore 'on'
-
-# Tmux configuration
-set-option -g status-position top
-
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'github_username/plugin_name#branch'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
+#set-option -g @resurrect-capture-pane-contents 'on'
+#set-option -g @continuum-restore 'on'
 
 # Autoinstall tmux plugin manager if not available
 if "test ! -d $TMUX_DATA/plugins/tpm" \
