--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -17,7 +17,7 @@ bind-key C-space send-prefix
 
 # Bind reload config
 unbind-key r
-bind-key r source-file $TMUX_HOME/tmux.conf
+bind-key r source-file "$TMUX_HOME/tmux.conf"
 
 # Rebind-key window split keys
 unbind-key %
@@ -35,14 +35,15 @@ bind-key -r l resize-pane -R 5
 bind-key -r m resize-pane -Z
 
 # Mouse toggle
-bind-key m set-option -g mouse on \; display 'Mouse On'
-bind-key M set-option -g mouse off \; display 'Mouse Off'
+bind-key m set-option -g mouse \; display "Mouse: #{?mouse,ON,OFF}"
 
-# Vi motions in tmux
+# Vi style copy/paste (wayland)
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-key -X begin-selection
-bind-key -T copy-mode-vi y send-key -X copy-selection-and-cancel
 bind-key -T copy-mode-vi C-v send-key -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel \
+    "wl-copy && wl-paste -n | wl-copy -p"
+bind-key p run "wl-paste -n | tmux load-buffer - ; tmux paste-buffer"
 
 # Statusline / Splits / Windows
 NORD_GREY='#3b4252'
@@ -55,6 +56,7 @@ set-option -g status-interval 5
 # Sensible Configs
 set-option -s escape-time 0
 set-option -g history-limit 50000
+set-option -g status-keys emacs
 
 # Plugin manager
 set-environment -g TMUX_PLUGIN_MANAGER_PATH "$TMUX_DATA/plugins/"
