tmux: open pane in same root

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -21,9 +21,9 @@ bind-key r source-file "$TMUX_HOME/tmux.conf"
 
 # Rebind-key window split keys
 unbind-key %
-bind-key | split-window -h
+bind-key | split-window -h -c "#{pane_current_path}"
 unbind-key '"'
-bind-key - split-window -v
+bind-key - split-window -v -c "#{pane_current_path}"
 
 # Resize panes
 bind-key -r j resize-pane -D 5
