change tmux leader to ctrl-a

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -10,10 +10,10 @@ set-option -as terminal-features ",$TERM*:RGB"
 set-option -g set-titles on
 set-option -g set-titles-string "tmux : #S · #W"
 
-# Define prefix as ctrl-space
+# Define prefix as ctrl-a
 unbind-key C-b
-set-option -g prefix C-space
-bind-key C-space send-prefix
+set-option -g prefix C-a
+bind-key C-a send-prefix
 
 # Bind reload config
 unbind-key r
