tmux: set default shell to zsh

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -5,6 +5,7 @@ TMUX_DATA="$XDG_DATA_HOME/tmux"
 # Terminal configuration
 set-option -g default-terminal "tmux-256color"
 set-option -as terminal-features ",$TERM*:RGB"
+set-option -g default-shell "$SHELL"
 
 # Session info in terminal title
 set-option -g set-titles on
