--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,8 +1,8 @@
+[general]
+live_config_reload = true
 import = [
     "~/.config/alacritty/themes/themes/nord.toml"
 ]
-
-live_config_reload = true
 
 [bell]
 animation = "EaseOutExpo"
@@ -41,13 +41,11 @@ y = 0
 
 [mouse]
 hide_when_typing = true
+bindings = [
+    { mouse = "Middle", action = "PasteSelection" }
+]
 
-[[mouse.bindings]]
-action = "PasteSelection"
-mouse = "Middle"
-
-[shell]
-program = "/bin/zsh"
+[terminal]
 
 [window]
 # decorations = "None"
