--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -47,12 +47,7 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel \
 bind-key p run "wl-paste -n | tmux load-buffer - ; tmux paste-buffer"
 
 # Statusline / Splits / Windows
-NORD_GREY='#3b4252'
-set-option -g pane-border-style bg=default,fg=color8
-set-option -g pane-active-border-style bg=default,fg=color6
-set-option -g mode-style bg=$NORD_GREY,fg=default
-set-option -g status-position top
-set-option -g status-interval 5
+source-file "$TMUX_HOME/tmux-statusline.conf"
 
 # Sensible Configs
 set-option -s escape-time 0
@@ -67,7 +62,6 @@ set-option -g @plugin 'tmux-plugins/tpm'
 set-option -g @plugin 'christoomey/vim-tmux-navigator'
 set-option -g @plugin 'tmux-plugins/tmux-resurrect'
 # set-option -g @plugin 'tmux-plugins/tmux-continuum'
-set-option -g @plugin 'erikw/tmux-powerline'
 
 # Tmux plugin configuration
 #set-option -g @resurrect-capture-pane-contents 'on'
