--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -47,7 +47,7 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel \
 bind-key p run "wl-paste -n | tmux load-buffer - ; tmux paste-buffer"
 
 # Statusline / Splits / Windows
-source-file "$TMUX_HOME/tmux-statusline.conf"
+source-file "$TMUX_HOME/tmux-theme.conf"
 
 # Sensible Configs
 set-option -s escape-time 0
