tmux: minor fixes

--- a/.config/tmux/tmux-theme.conf
+++ b/.config/tmux/tmux-theme.conf
@@ -4,12 +4,12 @@
 COLOR_ELEMENT="black"
 COLOR_ELEMENT_ACTIVE="white"
 COLOR_HIGHLIGHT="cyan"
-
-COLOR_BACKGROUND="#434c5e"
-COLOR_FOREGROUND="white"
+COLOR_BORDER="#434c5e"
 COLOR_TEXT_LIGHT="white"
 COLOR_TEXT_DARK="black"
 COLOR_CURSORLINE="black"
+COLOR_BACKGROUND="#434c5e"
+COLOR_FOREGROUND="white"
 
 # Glyphs
 ARROW_BOLD_LEFT=""
@@ -81,8 +81,8 @@ ${ARROW_RIGHT_THIN} \
 "
 
 # Color of splits borders
-set-option -g pane-border-style bg=default,fg=${COLOR_BACKGROUND}
+set-option -g pane-border-style bg=default,fg=${COLOR_BORDER}
 set-option -g pane-active-border-style bg=default,fg=${COLOR_HIGHLIGHT}
 
-# Color of cursorline in window browser
+# Border color of vertical/horizontal splits
 set-option -g mode-style bg=${COLOR_CURSORLINE},fg=default
