tmux: use tmux options instead of envvars where possible
otherwise these internal/temp variables would clutter our env.

--- a/.config/tmux/tmux-theme.conf
+++ b/.config/tmux/tmux-theme.conf
@@ -1,31 +1,31 @@
 ## Tmux theme
 
 # Colors
-COLOR_ELEMENT="black"
-COLOR_ELEMENT_ACTIVE="white"
-COLOR_HIGHLIGHT="cyan"
-COLOR_BORDER="#434c5e"
-COLOR_TEXT_LIGHT="white"
-COLOR_TEXT_DARK="black"
-COLOR_CURSORLINE="black"
-COLOR_BACKGROUND="#434c5e"
-COLOR_FOREGROUND="white"
+set-option -g @COLOR_ELEMENT "black"
+set-option -g @COLOR_ELEMENT_ACTIVE "white"
+set-option -g @COLOR_HIGHLIGHT "cyan"
+set-option -g @COLOR_BORDER "#434c5e"
+set-option -g @COLOR_TEXT_LIGHT "white"
+set-option -g @COLOR_TEXT_DARK "black"
+set-option -g @COLOR_CURSORLINE "black"
+set-option -g @COLOR_BACKGROUND "#434c5e"
+set-option -g @COLOR_FOREGROUND "white"
 
 # Glyphs
-ARROW_BOLD_LEFT=""
-ARROW_THIN_LEFT=""
-ARROW_RIGHT_BOLD=""
-ARROW_RIGHT_THIN=""
+set-option -g @ARROW_BOLD_LEFT ""
+set-option -g @ARROW_THIN_LEFT ""
+set-option -g @ARROW_RIGHT_BOLD ""
+set-option -g @ARROW_RIGHT_THIN ""
 
 # Position and refresh interval
 set-option -g status-position top
 set-option -g status-interval 5
 
 # Basic colors of the statusbar
-set-option -g status-style bg=${COLOR_BACKGROUND},fg=${COLOR_FOREGROUND}
+set-option -g status-style "bg=#{@COLOR_BACKGROUND},fg=#{@COLOR_FOREGROUND}"
 
 # Colors of the command prompt/message bar
-set-option -g message-style bg=${COLOR_BACKGROUND},fg=${COLOR_FOREGROUND}
+set-option -g message-style "bg=#{@COLOR_BACKGROUND},fg=#{@COLOR_FOREGROUND}"
 
 # Max length of left and right section
 set-option -g status-left-length 100
@@ -39,50 +39,50 @@ set-option -g window-status-separator ""
 
 # Style contents on the left section
 set-option -g status-left "\
-#[bg=${COLOR_HIGHLIGHT},fg=${COLOR_TEXT_DARK}] \
+#[bg=#{@COLOR_HIGHLIGHT},fg=#{@COLOR_TEXT_DARK}] \
 \#S \
-#[bg=default,fg=${COLOR_HIGHLIGHT}]\
-${ARROW_RIGHT_BOLD}\
+#[bg=default,fg=#{@COLOR_HIGHLIGHT}]\
+#{@ARROW_RIGHT_BOLD}\
 "
 
 # Style contents on the right section
 set-option -g status-right "\
-#[bg=default,fg=${COLOR_ELEMENT}]\
-${ARROW_BOLD_LEFT}\
-#[bg=${COLOR_ELEMENT},fg=${COLOR_TEXT_LIGHT}] \
+#[bg=default,fg=#{@COLOR_ELEMENT}]\
+#{@ARROW_BOLD_LEFT}\
+#[bg=#{@COLOR_ELEMENT},fg=#{@COLOR_TEXT_LIGHT}] \
 %H:%M \
-${ARROW_THIN_LEFT} \
+#{@ARROW_THIN_LEFT} \
  %F \
-#[bg=${COLOR_ELEMENT},fg=${COLOR_HIGHLIGHT}]${ARROW_BOLD_LEFT}\
-#[bg=${COLOR_HIGHLIGHT},fg=${COLOR_TEXT_DARK}] \
+#[bg=#{@COLOR_ELEMENT},fg=#{@COLOR_HIGHLIGHT}]#{@ARROW_BOLD_LEFT}\
+#[bg=#{@COLOR_HIGHLIGHT},fg=#{@COLOR_TEXT_DARK}] \
 #h \
 "
 
 # Style content for the active windows
 set-option -g window-status-current-format "\
-#[fg=${COLOR_BACKGROUND},bg=${COLOR_ELEMENT_ACTIVE}]\
-${ARROW_RIGHT_BOLD}\
-#[fg=${COLOR_TEXT_DARK},bg=${COLOR_ELEMENT_ACTIVE}] \
+#[fg=#{@COLOR_BACKGROUND},bg=#{@COLOR_ELEMENT_ACTIVE}]\
+#{@ARROW_RIGHT_BOLD}\
+#[fg=#{@COLOR_TEXT_DARK},bg=#{@COLOR_ELEMENT_ACTIVE}] \
 #I#F \
-${ARROW_RIGHT_THIN} \
+#{@ARROW_RIGHT_THIN} \
 #W \
-#[fg=${COLOR_ELEMENT_ACTIVE},bg=default]${ARROW_RIGHT_BOLD}\
+#[fg=#{@COLOR_ELEMENT_ACTIVE},bg=default]#{@ARROW_RIGHT_BOLD}\
 "
 
 # Style content for the inactive windows
 set-option -g window-status-format "\
-#[fg=${COLOR_BACKGROUND},bg=${COLOR_ELEMENT}]\
-${ARROW_RIGHT_BOLD}\
-#[fg=${COLOR_TEXT_LIGHT},bg=${COLOR_ELEMENT}] \
+#[fg=#{@COLOR_BACKGROUND},bg=#{@COLOR_ELEMENT}]\
+#{@ARROW_RIGHT_BOLD}\
+#[fg=#{@COLOR_TEXT_LIGHT},bg=#{@COLOR_ELEMENT}] \
 #I#{?window_flags,#F, } \
-${ARROW_RIGHT_THIN} \
+#{@ARROW_RIGHT_THIN} \
 #W \
-#[fg=${COLOR_ELEMENT},bg=default]${ARROW_RIGHT_BOLD}\
+#[fg=#{@COLOR_ELEMENT},bg=default]#{@ARROW_RIGHT_BOLD}\
 "
 
 # Color of splits borders
-set-option -g pane-border-style bg=default,fg=${COLOR_BORDER}
-set-option -g pane-active-border-style bg=default,fg=${COLOR_HIGHLIGHT}
+set-option -g pane-border-style "bg=default,fg=#{@COLOR_BORDER}"
+set-option -g pane-active-border-style "bg=default,fg=#{@COLOR_HIGHLIGHT}"
 
 # Border color of vertical/horizontal splits
-set-option -g mode-style bg=${COLOR_CURSORLINE},fg=default
+set-option -g mode-style "bg=#{@COLOR_CURSORLINE},fg=default"
