--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,6 +1,6 @@
 # Tmux install paths
-TMUX_HOME="$XDG_CONFIG_HOME/tmux"
-TMUX_DATA="$XDG_DATA_HOME/tmux"
+set-option -g @TMUX_HOME "$XDG_CONFIG_HOME/tmux"
+set-option -g @TMUX_DATA "$XDG_DATA_HOME/tmux"
 
 # Terminal configuration
 set-option -g default-terminal "tmux-256color"
@@ -18,7 +18,7 @@ bind-key C-space send-prefix
 
 # Bind reload config
 unbind-key r
-bind-key r source-file "$TMUX_HOME/tmux.conf"
+bind-key r source-file -F "#{@TMUX_HOME}/tmux.conf"
 
 # Rebind-key window split keys
 unbind-key %
@@ -47,7 +47,7 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel \
 bind-key p run "wl-paste -n | tmux load-buffer - ; tmux paste-buffer"
 
 # Statusline / Splits / Windows
-source-file "$TMUX_HOME/tmux-theme.conf"
+source-file -F "#{@TMUX_HOME}/tmux-theme.conf"
 
 # Sensible Configs
 set-option -s escape-time 0
@@ -55,21 +55,24 @@ set-option -g history-limit 50000
 set-option -g status-keys emacs
 
 # Plugin manager
-set-environment -g TMUX_PLUGIN_MANAGER_PATH "$TMUX_DATA/plugins/"
-set-option -g @plugin 'tmux-plugins/tpm'
+set-environment -gF TMUX_PLUGIN_MANAGER_PATH "#{@TMUX_DATA}/plugins/"
+set-option -g @plugin "tmux-plugins/tpm"
 
 # Tmux plugins
-set-option -g @plugin 'christoomey/vim-tmux-navigator'
-set-option -g @plugin 'tmux-plugins/tmux-resurrect'
-# set-option -g @plugin 'tmux-plugins/tmux-continuum'
+set-option -g @plugin "christoomey/vim-tmux-navigator"
+set-option -g @plugin "tmux-plugins/tmux-resurrect"
+# set-option -g @plugin "tmux-plugins/tmux-continuum"
 
 # Tmux plugin configuration
-#set-option -g @resurrect-capture-pane-contents 'on'
-#set-option -g @continuum-restore 'on'
+#set-option -g @resurrect-capture-pane-contents "on"
+#set-option -g @continuum-restore "on"
 
 # Autoinstall tmux plugin manager if not available
-if "test ! -d $TMUX_DATA/plugins/tpm" \
-    "run 'git clone https://github.com/tmux-plugins/tpm $TMUX_DATA/plugins/tpm && $TMUX_DATA/plugins/tpm/bin/install_plugins'"
+if-shell \
+    "test ! -d #{@TMUX_DATA}/plugins/tpm" \
+    "run-shell \
+        'git clone https://github.com/tmux-plugins/tpm #{@TMUX_DATA}/plugins/tpm \
+        && #{@TMUX_DATA}/plugins/tpm/bin/install_plugins'"
 
 # Initialize tmux plugin manager (keep this line at the very bottom of tmux.conf)
-run '$TMUX_DATA/plugins/tpm/tpm'
+run-shell "#{@TMUX_DATA}/plugins/tpm/tpm"
