nvim: migrate lualine -> slimline
- also refactor lazy loading
- match tmux theme and minor tmux improvements

--- a/.config/tmux/tmux-theme.conf
+++ b/.config/tmux/tmux-theme.conf
@@ -1,21 +1,28 @@
 ## Tmux theme
-
 # Colors
-set-option -g @COLOR_ELEMENT "black"
-set-option -g @COLOR_ELEMENT_ACTIVE "white"
-set-option -g @COLOR_HIGHLIGHT "cyan"
-set-option -g @COLOR_BORDER "#434c5e"
-set-option -g @COLOR_TEXT_LIGHT "white"
-set-option -g @COLOR_TEXT_DARK "black"
+set-option -g @COLOR_WINDOW "#616E88"
+set-option -g @COLOR_WINDOW_ACTIVE "blue"
+set-option -g @COLOR_SESSION "black"
+set-option -g @COLOR_SESSION_FILL "blue"
+set-option -g @COLOR_HOSTNAME "#616E88"
+set-option -g @COLOR_TIME "green"
+set-option -g @COLOR_EMPTY_FILL "#616E88"
+set-option -g @COLOR_DATE "black"
+set-option -g @COLOR_DATE_FILL "blue"
+
+set-option -g @COLOR_BORDER "#434C5E"
+set-option -g @COLOR_BORDER_ACTIVE "blue"
 set-option -g @COLOR_CURSORLINE "black"
-set-option -g @COLOR_BACKGROUND "#434c5e"
-set-option -g @COLOR_FOREGROUND "white"
+set-option -g @COLOR_BACKGROUND "#2E3440"
+set-option -g @COLOR_FOREGROUND "#D8DEE9"
 
 # Glyphs
-set-option -g @ARROW_BOLD_LEFT ""
-set-option -g @ARROW_THIN_LEFT ""
-set-option -g @ARROW_RIGHT_BOLD ""
-set-option -g @ARROW_RIGHT_THIN ""
+# set-option -g @SEPARATOR_LEFT_BOLD ""
+# set-option -g @SEPARATOR_RIGHT_BOLD ""
+# set-option -g @SEPARATOR_LEFT_BOLD ""
+# set-option -g @SEPARATOR_RIGHT_BOLD ""
+set-option -g @SEPARATOR_LEFT_BOLD ""
+set-option -g @SEPARATOR_RIGHT_BOLD ""
 
 # Position and refresh interval
 set-option -g status-position top
@@ -39,50 +46,45 @@ set-option -g window-status-separator ""
 
 # Style contents on the left section
 set-option -g status-left "\
-#[bg=#{@COLOR_HIGHLIGHT},fg=#{@COLOR_TEXT_DARK}] \
-\#S \
-#[bg=default,fg=#{@COLOR_HIGHLIGHT}]\
-#{@ARROW_RIGHT_BOLD}\
+#[bg=#{@COLOR_SESSION_FILL},fg=#{@COLOR_SESSION},bold]\
+ \#S \
+#[bg=#{@COLOR_BACKGROUND},fg=#{@COLOR_SESSION_FILL},bold]\
+#{@SEPARATOR_RIGHT_BOLD}\
+   \
 "
 
 # Style contents on the right section
 set-option -g status-right "\
-#[bg=default,fg=#{@COLOR_ELEMENT}]\
-#{@ARROW_BOLD_LEFT}\
-#[bg=#{@COLOR_ELEMENT},fg=#{@COLOR_TEXT_LIGHT}] \
-%H:%M \
-#{@ARROW_THIN_LEFT} \
- %F \
-#[bg=#{@COLOR_ELEMENT},fg=#{@COLOR_HIGHLIGHT}]#{@ARROW_BOLD_LEFT}\
-#[bg=#{@COLOR_HIGHLIGHT},fg=#{@COLOR_TEXT_DARK}] \
-#h \
+#[bg=#{@COLOR_BACKGROUND},fg=#{@COLOR_HOSTNAME}]\
+ #h \
+#[bg=#{@COLOR_BACKGROUND},fg=#{@COLOR_TIME},bold]\
+  %H:%M \
+ \
+#[bg=#{@COLOR_BACKGROUND},fg=#{@COLOR_EMPTY_FILL},bold]\
+#{@SEPARATOR_LEFT_BOLD}\
+#[bg=#{@COLOR_EMPTY_FILL},fg=#{@COLOR_DATE_FILL},bold]\
+#{@SEPARATOR_LEFT_BOLD}\
+#[bg=#{@COLOR_DATE_FILL},fg=#{@COLOR_DATE},bold]\
+  %F \
 "
 
 # Style content for the active windows
 set-option -g window-status-current-format "\
-#[fg=#{@COLOR_BACKGROUND},bg=#{@COLOR_ELEMENT_ACTIVE}]\
-#{@ARROW_RIGHT_BOLD}\
-#[fg=#{@COLOR_TEXT_DARK},bg=#{@COLOR_ELEMENT_ACTIVE}] \
-#I#F \
-#{@ARROW_RIGHT_THIN} \
-#W \
-#[fg=#{@COLOR_ELEMENT_ACTIVE},bg=default]#{@ARROW_RIGHT_BOLD}\
+#[bg=#{@COLOR_BACKGROUND},fg=#{@COLOR_WINDOW_ACTIVE},bold]\
+ #I\
+ #W#{?window_flags,#F, } \
 "
 
 # Style content for the inactive windows
 set-option -g window-status-format "\
-#[fg=#{@COLOR_BACKGROUND},bg=#{@COLOR_ELEMENT}]\
-#{@ARROW_RIGHT_BOLD}\
-#[fg=#{@COLOR_TEXT_LIGHT},bg=#{@COLOR_ELEMENT}] \
-#I#{?window_flags,#F, } \
-#{@ARROW_RIGHT_THIN} \
-#W \
-#[fg=#{@COLOR_ELEMENT},bg=default]#{@ARROW_RIGHT_BOLD}\
+#[bg=#{@COLOR_BACKGROUND},fg=#{@COLOR_WINDOW}]\
+ #I\
+ #W#{?window_flags,#F, } \
 "
 
 # Color of splits borders
-set-option -g pane-border-style "bg=default,fg=#{@COLOR_BORDER}"
-set-option -g pane-active-border-style "bg=default,fg=#{@COLOR_HIGHLIGHT}"
+set-option -g pane-border-style "bg=#{@COLOR_BACKGROUND},fg=#{@COLOR_BORDER}"
+set-option -g pane-active-border-style "bg=#{@COLOR_BACKGROUND},fg=#{@COLOR_BORDER_ACTIVE}"
 
-# Border color of vertical/horizontal splits
-set-option -g mode-style "bg=#{@COLOR_CURSORLINE},fg=default"
+# Color of the cursorline and search matches
+set-option -g mode-style "bg=#{@COLOR_CURSORLINE},fg=#{@COLOR_FOREGROUND}"
