--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -53,6 +53,7 @@ source-file -F "#{@TMUX_HOME}/tmux-theme.conf"
 set-option -s escape-time 0
 set-option -g history-limit 50000
 set-option -g status-keys emacs
+set-option -g base-index 1
 
 # Plugin manager
 set-environment -gF TMUX_PLUGIN_MANAGER_PATH "#{@TMUX_DATA}/plugins/"
