nvim: go minimal

--- a/.config/tmux/tmux-theme.conf
+++ b/.config/tmux/tmux-theme.conf
@@ -13,12 +13,8 @@ set-option -g @COLOR_DATE_FILL "blue"
 set-option -g @COLOR_BORDER "#434C5E"
 set-option -g @COLOR_BORDER_ACTIVE "blue"
 set-option -g @COLOR_CURSORLINE "black"
-set-option -g @COLOR_BACKGROUND "#2E3440"
-set-option -g @COLOR_FOREGROUND "#D8DEE9"
-
-# Glyphs
-set-option -g @SEPARATOR_LEFT_BOLD ""
-set-option -g @SEPARATOR_RIGHT_BOLD ""
+set-option -g @COLOR_BACKGROUND "default"
+set-option -g @COLOR_FOREGROUND "default"
 
 # Position and refresh interval
 set-option -g status-position top
@@ -56,10 +52,6 @@ set-option -g status-right "\
 #[bg=#{@COLOR_BACKGROUND},fg=#{@COLOR_TIME},bold]\
   %H:%M \
  \
-#[bg=#{@COLOR_BACKGROUND},fg=#{@COLOR_EMPTY_FILL},bold]\
-#{@SEPARATOR_LEFT_BOLD}\
-#[bg=#{@COLOR_EMPTY_FILL},fg=#{@COLOR_DATE_FILL},bold]\
-#{@SEPARATOR_LEFT_BOLD}\
 #[bg=#{@COLOR_DATE_FILL},fg=#{@COLOR_DATE},bold]\
   %F \
 "
